# osi_lab1

./: .clang-format  CMakeLists.txt  combined.c  create-file.c  io-thpt-read.c  shell.c  short-path.c  test.c
.github/workflows/: ci.yml
